overlays/dev/backend-patch.yml
# Deployment 패치
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-backend
  namespace: default
spec:
  replicas: 1  # Lower the number of replicas for development
  template:
    spec:
      containers:
        - name: demo-backend
          resources:
            limits:
              memory: "256Mi"  # Limit the resources for development
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"

# Service 패치
apiVersion: v1
kind: Service
metadata:
  name: demo-backend
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/health"
spec:
  type: ClusterIP  # Change service type to ClusterIP for development
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
