overlays/dev/ingress-argocd.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # HTTPS 미사용
spec:
  ingressClassName: nginx
  rules:
  # 호스트 기반 라우팅, 서브도메인 지원 확인해야함.
  - host: "argocd.39a7-119-198-205-106.ngrok-free.app"
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
